// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render with active 1`] = `
<div
  class="toolbar active"
>
  <div
    class="item primary"
  >
    <span
      aria-label="plus"
      class="fa fa-plus"
    />
  </div>
  <div
    class="item primary"
  >
    <span
      aria-label="search"
      class="fa fa-search"
    />
  </div>
  <div
    class="item primary"
  >
    <span
      aria-label="gear"
      class="fa fa-gear"
    />
  </div>
</div>
`;

exports[`The component should render with active false 1`] = `
<div
  class="toolbar"
>
  <div
    class="item primary"
  >
    <span
      aria-label="plus"
      class="fa fa-plus"
    />
  </div>
  <div
    class="item primary"
  >
    <span
      aria-label="search"
      class="fa fa-search"
    />
  </div>
  <div
    class="item primary"
  >
    <span
      aria-label="gear"
      class="fa fa-gear"
    />
  </div>
</div>
`;
